Configure Rating Calculation Management

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -46,6 +46,8 @@ greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
 greenCity.pages.seeAll=See all
 
+greenCity.pages.showDeleted=Show Deleted
+greenCity.pages.showActive=Show Active
 greenCity.pages.hide=Hide
 greenCity.pages.show=Make Visible
 greenCity.pages.table.id=ID
