--- a/core/src/main/resources/messages_ua.properties
+++ b/core/src/main/resources/messages_ua.properties
@@ -47,6 +47,8 @@ greenCity.pages.search=\u0428\u0443\u043A\u0430\u0442\u0438
 greenCity.pages.filter=\u0424\u0456\u043B\u044C\u0442\u0440
 greenCity.pages.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.delete=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
+greenCity.pages.showDeleted=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0432\u0438\u0434\u0430\u043B\u0435\u043D\u0456
+greenCity.pages.showActive=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0430\u043A\u0442\u0438\u0432\u043D\u0456
 greenCity.pages.hide=\u041F\u0440\u0438\u0445\u043E\u0432\u0430\u0442\u0438
 greenCity.pages.show=\u0412\u0456\u0434\u043E\u0431\u0440\u0430\u0436\u0430\u0442\u0438
 greenCity.pages.table.id=ID
@@ -317,7 +319,7 @@ greenCity.sidebar.tags=\u0422\u0435\u0433\u0438
 greenCity.sidebar.ecoPlaces=\u0415\u043A\u043E \u041C\u0456\u0441\u0446\u044F
 greenCity.sidebar.ratings=\u0420\u0435\u0439\u0442\u0438\u043D\u0433\u0438
 greenCity.sidebar.ratings.all=\u0412\u0441\u0456 \u0420\u0435\u0439\u0442\u0438\u043D\u0433\u0438
-greenCity.sidebar.ratings.calculation.setup=\u041D\u0430\u043B\u0430\u0448\u0442\u0443\u0432\u0430\u043D\u043D\u044F
+greenCity.sidebar.ratings.calculation.setup=\u041D\u0430\u043B\u0430\u0448\u0442\u0443\u0432\u0430\u043D\u043D\u044F \u0440\u0435\u0439\u0442\u0438\u043D\u0433\u0443
 greenCity.sidebar.socialNetworksImagines=\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F \u0421\u043E\u0446\u043C\u0435\u0440\u0435\u0436
 greenCity.sidebar.achievements=\u0414\u043E\u0441\u044F\u0433\u043D\u0435\u043D\u043D\u044F
 greenCity.sidebar.achievements.all=\u0412\u0441\u0456 \u0414\u043E\u0441\u044F\u0433\u043D\u0435\u043D\u043D\u044F
