fixed pagination, updating and deactivating user

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -210,7 +210,7 @@ greenCity.event.invitees=Invitees
 greenCity.event.invitees.all=All
 greenCity.event.invitees.friends=Friends
 /*userspage*/
-greenCity.user.page.h=Manager Page
+greenCity.user.page.h=Users Management Page
 greenCity.user.page.add.user=Add User
 greenCity.user.page.edit.user=Edit User
 greenCity.user.page.change.role=Change role
