--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -135,7 +135,7 @@ greenCity.pages.table.saturday=SATURDAY
 greenCity.pages.table.sunday=SUNDAY
 greenCity.pages.table.start.time=start time
 greenCity.pages.table.end.time=end time
-greenCity.pages.table.add.break.hourse=Add break hours
+greenCity.pages.table.add.break.hours=Add break hours
 greenCity.pages.table.photo=Photo
 greenCity.pages.table.type=Type
 greenCity.pages.table.host.path=Host Path
