--- a/core/src/main/resources/messages_ua.properties
+++ b/core/src/main/resources/messages_ua.properties
@@ -132,7 +132,7 @@ greenCity.pages.table.open.time=\u0427\u0430\u0441\u0020\u0432\u0456\u0434\u043A
 greenCity.pages.table.close.time=\u0427\u0430\u0441\u0020\u0417\u0430\u043A\u0440\u0438\u0442\u0442\u044F
 greenCity.pages.table.break.start=\u041F\u0435\u0440\u0435\u0440\u0432\u0430\u000a(\u043F\u043E\u0447\u0430\u0442\u043E\u043A)
 greenCity.pages.table.break.end=\u041F\u0435\u0440\u0435\u0440\u0432\u0430\u0020(\u043A\u0456\u043D\u0435\u0446\u044C)
-greenCity.pages.table.add.break.hourse=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u0447\u0430\u0441\u0020\u043F\u0435\u0440\u0435\u0440\u0432\u0438
+greenCity.pages.table.add.break.hours=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u0447\u0430\u0441\u0020\u043F\u0435\u0440\u0435\u0440\u0432\u0438
 greenCity.pages.table.delete.break.title=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438\u0020\u0433\u043E\u0434\u0438\u043D\u0438\u0020\u043F\u0435\u0440\u0435\u0440\u0432\u0438
 greenCity.pages.table.delete.add.discount=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u0417\u043D\u0438\u0436\u043A\u0443
 greenCity.pages.table.visibility=\u0412\u0438\u0434\u0438\u043c\u0456\u0441\u0442\u044C
