fixed searching users by name and email

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -41,6 +41,7 @@ greenCity.validation.max.tags=Length of tag list can not be more than {max}
 greenCity.current.language=En
 /*forallpages*/
 greenCity.pages.search=Search
+greenCity.pages.search.detailed=Search by name and email columns
 greenCity.pages.filter=Filter
 greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
