--- a/core/src/main/resources/messages_ua.properties
+++ b/core/src/main/resources/messages_ua.properties
@@ -44,6 +44,7 @@ greenCity.current.language=\u0055\u0061
 
 /*forallpages*/
 greenCity.pages.search=\u0428\u0443\u043A\u0430\u0442\u0438
+greenCity.pages.search.detailed=\u0428\u0443\u043A\u0430\u0442\u0438 \u0437\u0430 \u0456\u043C\u0435\u043D\u0435\u043C \u0442\u0430 \u0435\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u044E \u043F\u043E\u0448\u0442\u043E\u044E
 greenCity.pages.filter=\u0424\u0456\u043B\u044C\u0442\u0440
 greenCity.pages.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.delete=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
